--- a/index.css
+++ b/index.css
@@ -186,7 +186,7 @@ canvas {
 
 .menu-right {
   position: fixed;
-  top: 0;
+  top: 3px;
   right: 0;
   width: 14%;
   margin: 0;
@@ -254,7 +254,8 @@ canvas {
   display: none;
   opacity: 0;
   position: fixed;
-  top: 38px;
+  top:42px;
+  /* top: 38px; */
   left: 50%;
   width: 40%;
   max-height: calc(100vh - 50px);
