--- a/index.css
+++ b/index.css
@@ -240,7 +240,7 @@ canvas {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100svh;
+  height: 100%;
   margin: 0;
   padding: 0;
   border: none;
